# rustybot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  action.yml  renovate.json
.github/: FUNDING.yml
.github/workflows/: test-action.yml  test-rust.yml  test.yml
src/: config-schema.json  config.rs  config_loader.rs  github.rs  github_client.rs  main.rs
