[package]
name = "rustybot"
authors = ["Yuri Shkuro <github@ysh.us>"]
description = "Forthcoming."
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
publish = false

[dependencies]
clap = { version = "4.0", features = ["derive"] }
jsonschema = "0.18.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
tokio = { version = "1.38.0", features = ["full"] }

[dev-dependencies]
wiremock = "0.6.0"
